# wps_xr

./: .flake8  README.md  pyproject.toml
.github/: upstream-dev-ci.yaml
.github/workflows/: ci.yaml  upstream-dev-ci.yaml
ci/: environment-upstream-dev.yml
tests/: __init__.py  test_backend.py  test_backend_array.py  test_binary_backend_array.py  test_index.py  test_wps.py  test_wps_accessor.py
tests/test_files/synthetic/: 00001-00010.00001-00010  index
tests/test_files/synthetic2d/: 00001-00010.00001-00010  index
tests/test_files/synthetic2d_flipped/: 00001-00010.00001-00010  index
tests/test_files/synthetic2d_same_startend/: index
tests/test_files/synthetic2d_scaled/: index
tests/test_files/synthetic3d/: 00001-00010.00001-00010  index
tests/test_files/synthetic3d_flipped/: 00001-00010.00001-00010  index
wps_xr/: __init__.py  backend.py  backend_array.py  config.py  config.yaml  index.py  utils.py  wps.py  wps_accessor.py
