[tool.poetry]
name = "wps_xr"
version = "0.1.0"
description = "Makes WPS binary xarray-ready"
authors = ["Lukas Pilz <Lukas.Pilz@iup.uni-heidelberg.de>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
xarray = "^2022.6.0"
dask = "^2022.8.1"
loguru = "^0.6.0"
donfig = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pathlib = "^1.0.1"
pre-commit = "^2.20.0"
pytest-cov = "^3.0.0"
matplotlib = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
