[tool.poetry]
name = "wps_xr"
version = "0.1.0"
description = "Makes WPS binary xarray-ready"
authors = ["Lukas Pilz <Lukas.Pilz@iup.uni-heidelberg.de>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.12"
xarray = "^2024.9.0"
dask = "^2024.12.1"
loguru = "^0.7.3"
donfig = "^0.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pre-commit = "^4.3.0"
pytest-cov = "^7.0.0"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
